# llamba-framework

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
llamba_library/: bioage_model.py  functions.py  plots.py
samples/: framework-in-use.ipynb  library-in-action.ipynb
tests/: test_functions.py
