[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "llamba-framework"
version = "0.1.11"
description = "A framework to merge BioAge models with LLMs!"
readme = "README.md"
authors = [
  "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
  "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
maintainers = [
    "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
    "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
repository = "https://github.com/mike-live/llamba-framework"

[tool.poetry.dependencies]
python = "3.11.*"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
